--- a/eventoBoton.html
+++ b/eventoBoton.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	<h1>Control del dibujo mediante boton</h1>
+	<p>
+		<input type="text" id="campoTexto">
+		<input type="button" id="botoncito" value="Dale click aqui!">	
+	</p>
 	<canvas height="300" width="300" id="maqueta"></canvas>
 	<p>Asi quedara el dibujo, haber como sale esto, vamos con fe </p>
 	<script type="text/javascript" src="eventoBoton.js"></script>
